Initial Calendar Content

--- a/src/content/assignments/assignment1/Assignment1.mdx
+++ b/src/content/assignments/assignment1/Assignment1.mdx
@@ -15,6 +15,7 @@ import {
     CourseInformationLink,
 } from 'src/components/CourseInformation';
 
+import CanvasGroupsNotCreated from 'src/content/assignments/CanvasGroupsNotCreated.mdx'
 import ClarityAndPresentationReference from 'src/content/assignments/ClarityAndPresentationReference.mdx'
 import ContributionStatementReference from 'src/content/assignments/ContributionStatementReference.mdx'
 import GroupAssignment from 'src/content/assignments/GroupAssignment.mdx'
@@ -226,7 +227,7 @@ This milestone will be graded on a scale of __3 points__:
   * ASSIGNMENT 1B
   *
   */}
-<CollapseProjectMilestone heading='1b: Group Proposals' dueDateName='dueDateAssignment1b'>
+<CollapseProjectMilestone heading='1b: Group Proposals' dueDateName='dueDateAssignment1b' revisionDueDateName='dueDateAssignment1b_revised'>
 
 The goal of this milestone is to propose multiple specific problems that could form the basis of a design project for this class.
 Thursday and Friday will then include presenting these for feedback from peers and course staff.
@@ -248,12 +249,12 @@ After receiving critique on Thursday, update your proposals ahead of additional 
 No more than one page of text in PDF format.
 
 - <GroupAssignment />
+- <CanvasGroupsNotCreated />
 - <ClarityAndPresentationReference />
 - <ContributionStatementReference />
 - After receiving critique on Thursday, submit an updated version.
-  Submit an additional separate PDF that includes both
-  a [Contribution Statement](/assignments/#contribution-statements)
-  and a brief explanation of revisions (e.g., one paragraph on what you revised, why you revised it).
+  In the same additional separate PDF in which you submit your Contribution Statement,
+  also provide a brief explanation of revisions (e.g., one paragraph on what you revised, why you revised it).
 
 Submit via Canvas here:
 
@@ -317,6 +318,7 @@ If appropriate, you may conduct this analysis by describing a scenario that illu
 No more than one page of text in PDF format.
 
 - <GroupAssignment />
+- <CanvasGroupsNotCreated />
 - <ClarityAndPresentationReference />
 - <ContributionStatementReference />
 
