--- a/src/content/assignments/assignment2/Assignment2.mdx
+++ b/src/content/assignments/assignment2/Assignment2.mdx
@@ -377,7 +377,7 @@ This milestone will be graded on a scale of __8 points__:
   * ASSIGNMENT 2F
   *
   */}
-<CollapseProjectMilestone heading='2f: Design Check-In ("3x4")' dueDateName='dueDateAssignment2f'>
+<CollapseProjectMilestone heading='2f: Design Check-In ("3x4")' dueDateName='dueDateAssignment2f' revisionDueDateName='dueDateAssignment2f_revised'>
 
 The goal of this milestone is to develop distinct design ideas that address your tasks.
 
@@ -412,9 +412,8 @@ Be sure:
 - <ContributionStatementReference />
 - <ParticipantAnonymity />
 - After receiving critique on Thursday, submit an updated version.
-  Submit an additional separate PDF that includes both
-  a [Contribution Statement](/assignments/#contribution-statements)
-  and a brief explanation of revisions (e.g., one paragraph on what you revised, why you revised it).
+  In the same additional separate PDF in which you submit your Contribution Statement,
+  also provide a brief explanation of revisions (e.g., one paragraph on what you revised, why you revised it).
 
 Submit via Canvas here:
 
