--- a/src/content/assignments/assignment4/Assignment4.mdx
+++ b/src/content/assignments/assignment4/Assignment4.mdx
@@ -13,7 +13,6 @@ import {
 } from 'src/components/AssignmentSamples';
 
 import {
-    CourseInformationDueDate,
     CourseInformationLink,
 } from 'src/components/CourseInformation';
 
@@ -38,6 +37,9 @@ a __web post__ and through a __poster__ with an associated __pitch__.
 ## Milestones and Deliverables
 
 This is a group assignment, consisting of five milestones.
+
+<Alert severity="error">TODO: SPLIT 4web INTO TWO PARTS</Alert>
+<Alert severity="error">TODO: UPDATE SUBMISSION OF 4web CONTENT</Alert>
 
 {/*
   *
