Resolve Home Page

--- a/src/pages/Home.mdx
+++ b/src/pages/Home.mdx
@@ -14,7 +14,7 @@ import {
 
 # Course Overview
 
-<Alert severity='error'>Content is Under Development and Subject to Change</Alert>
+{/* <Alert severity='error'>Content is Under Development and Subject to Change</Alert> */}
 
 ## Course Description
 
@@ -111,12 +111,9 @@ The course is overwhelmingly organized around a group project, in which students
 
 - __Office Hours__
 
-<Alert severity='error'>
   - James, by appointment.
-  {/* TODO Office Hours */}
-  {/* - Qisheng, Thursdays 11:30 to 12:30, [CSE](https://uw.edu/maps/?cse) 3rd Floor Breakout. */}
-  {/* - Jesse, Wednesdays 4:00 to 5:00, via Zoom. */}
-</Alert>
+  - Lisa, Thursdays 1:00 to 2:00, [CSE](https://uw.edu/maps/?cse) 624.
+  - Simona, Wednesdays 2:30 to 3:30, [CSE](https://uw.edu/maps/?cse) 3rd Floor Breakout.
 
   Scheduled office hours require that you email beforehand (i.e., at least one hour beforehand).
   If nobody has emailed regarding an office hour, course staff may not be available.
@@ -138,8 +135,6 @@ including the opportunities this course provides working with a group in an inte
 
 The overall course grade will be computed as follows:
 
-{/* TODO: Rework points for Assignment Final Deliverables */}
-<Alert severity='error'>
 - __65%__: Group Project
   - __5%__: Assignment 1, Project Brainstorming and Proposal
     - 1a: Individual Brainstorm (1%)
@@ -165,7 +160,6 @@ The overall course grade will be computed as follows:
     - Individual Presentation Delivery (2%)
 - __10%__: Participation
 - __25%__: Exam
-</Alert>
 
 Each assignment will also provide a point breakdown intended to convey how it will be graded.
 Design is an inherently subjective practice, and so grading in this course is necessarily subjective.
@@ -211,6 +205,18 @@ via a video call with a member of their group.
 
 We will also use the in-room Panopto system to record lecture components of the course.
 This can support review of material, but is not a substitute for in-person activities.
+
+## Late Policy
+We generally expect all assignments will be submitted according to the deadline in Canvas and the assignment description.
+This is a fast-paced course, with many elements of the project depending on prior elements.
+The course staff's ability to give feedback also relies on timely submissions
+(e.g., course staff will often review submissions quickly after they are submitted to be ready for course activities).
+
+If your group feels that you would really benefit from an extension,
+or if there is some kind of emergency impacting your ability to turn in assignments,
+please contact the course staff before the submission deadline.
+We will do our best to be flexible and work with you to so that your group stays on track.
+Except in extreme circumstances, we will typically not be able to give an extension of more than 1 day.
 
 ## Accommodations and Additional University Policies
 
