Add to Contribution Statement

--- a/src/content/assignments/ContributionStatement.mdx
+++ b/src/content/assignments/ContributionStatement.mdx
@@ -10,10 +10,10 @@ the percentage of effort that each member contributed in that specific milestone
 and a corresponding list of specific activities.
 An example contribution statement might be:
 
-- *Name 1*: 40%, researched the background of the problem, outlined the content of the document, wrote the first version of one paragraph, selected the images to be included
-- *Name 2*: 15%, conducted 3 interviews (with *Name 4*) and took notes
-- *Name 3*: 20%, wrote the first version of the background section, made sure the final document was submitted
-- *Name 4*: 25%, organized the group meeting, conducted 3 interviews (with *Name 2*), put together the first draft of the document's results section
+- *Name 1*: 20%, researched the background of the problem, outlined the content of the document, wrote the first version of one paragraph, selected the images to be included.
+- *Name 2*: 35%, conducted 3 interviews (with *Name 4*) and took notes.
+- *Name 3*: 10%, wrote the first version of the background section, made sure the final document was submitted.
+- *Name 4*: 35%, organized the group meeting, conducted 3 interviews (with *Name 2*), put together the first draft of the document's results section.
 
 You should discuss and agree upon this statement of what you each contributed and how much this contributed to the overall assignment.
 
@@ -25,3 +25,5 @@ so we gather them only as a summary indication and will not use them directly in
 
 If you feel your team's contribution statement does not appropriately convey team contributions, you may email the course staff.
 If you feel a member of your team is not contributing appropriately, you may email the course staff.
+
+We will also separately solicit confidential project team feedback twice in the project sequence.
