Revise 2c and 2d to List Specific Findings

--- a/src/content/assignments/assignment2/Assignment2.mdx
+++ b/src/content/assignments/assignment2/Assignment2.mdx
@@ -174,15 +174,22 @@ but also about effectively conducting your design research.
 
 Describe your first design research participant and your findings:
 
-- Who you observed or interviewed, their background, and the environment.
+- What did you do?
+  - Who you observed or interviewed, their relevant background or context.
 - What did you learn?
-- What tasks, problems, or opportunities did you uncover?
-- Did you encounter any difficulties establishing rapport or getting the information you need?
+  - List **six** specific findings based on what you observed or learned.
+  - For example, what specific tasks, problems, or opportunities did you uncover?
 
-Discuss what remains to be pursued in your additional design research.
+We expect findings will be short but concrete.
+For example, findings might be organized as a bulleted list,
+where each bullet starts with a bolded summary of the finding
+and then shares a participant quote or researcher observation that informed that finding.
+
+Then discuss what remains to be pursued in your additional design research.
 We fully expect changes will be necessary, as design research
 can be difficult to get right and often important topics are left unresolved.
 
+- Did you encounter any difficulties establishing rapport or getting the information you need?
 - What are your plans for the remaining participants?
 - How do you plan to change your design research plan based on what you learned with your first participant?
 
@@ -234,17 +241,27 @@ organizing observations around themes and developing insights into tasks that ca
 
 Complete design research with a total of at least three participants. Discuss your process and what you learned:
 
-- Who you observed or interviewed, their background, and the environment.
-- Note anything unique about each participant and comment on the rationale behind these observations.
+- What did you do?
+  - Who you observed or interviewed, their relevant background or context.
 - What did you learn?
-- What tasks, problems, or opportunities did you uncover?
+  - List **at least eight** specific findings based on what you observed or learned.
+  - For example, what specific tasks, problems, or opportunities did you uncover?
+
+We expect findings will be short but concrete.
+For example, findings might be organized as a bulleted list,
+where each bullet starts with a bolded summary of the finding
+and then shares a participant quote or researcher observation that informed that finding.
+
+Although you now have more participants, this milestone asks for relatively few additional findings.
+We expect you will curate your findings
+(e.g., to focus on those which are most interesting, to convey the range of things you learned).
 
 Across your participants, we expect some emergence of common themes, problems, and practices.
 
-- Identify high-level themes and problems the participants share in their practices.
-- Do these themes, problems, and practices suggest tasks that are important to design for?
+- Identify high-level themes and problems that are suggested by your findings across multiple participants.
+- Do your findings, themes, and problems suggest tasks that are important to design for?
 
-If you are having trouble identifying high-level themes, problems, and practices,
+If you are having trouble identifying high-level themes, problems, and design opportunities,
 it may indicate a need to develop additional understanding through more design research.
 Because your findings at this point are critical to setting a foundation for your project,
 ensure your design research has provided you the insights and perspective you need to proceed.
@@ -271,8 +288,8 @@ These should help you begin to identify tasks essential to your design.
 No more than four pages of text in PDF format, to include:
 
 - Summary of key findings or takeaways (one paragraph at beginning).
-- Design research participants (less than one page).
-- Design research themes (less than one page).
+- Design research participants (one or two paragraphs).
+- Design research findings and themes (less than two pages).
 - Task analysis questions (less than two pages).
 
 Be sure:
