Remove Under Development Alerts

--- a/src/content/assignments/assignment3/Assignment3.mdx
+++ b/src/content/assignments/assignment3/Assignment3.mdx
@@ -27,7 +27,7 @@ import path3pPresentationStaffForm from '../../../assets/assignments/3p-presenta
 
 # Assignment 3: Getting the Design Right
 
-<Alert severity='error'>Content is Under Development and Subject to Change</Alert>
+{/* <Alert severity='error'>Content is Under Development and Subject to Change</Alert> */}
 
 ## Overview
 
