--- a/src/content/assignments/assignment2/Assignment2.mdx
+++ b/src/content/assignments/assignment2/Assignment2.mdx
@@ -26,7 +26,7 @@ import path2pPresentationStaffForm from '../../../assets/assignments/2p-presenta
 
 # Assignment 2: Getting the Right Design
 
-<Alert severity='error'>Content is Under Development and Subject to Change</Alert>
+{/* <Alert severity='error'>Content is Under Development and Subject to Change</Alert> */}
 
 ## Overview
 
