--- a/src/content/assignments/assignment2/Assignment2.mdx
+++ b/src/content/assignments/assignment2/Assignment2.mdx
@@ -217,9 +217,10 @@ so that you can easily present them to peers for critique.
 
 This milestone will be graded on a scale of __8 points__:
 
-1. __Information from the First Participant__: (4 points)
-2. __Plan for Remaining Participants__: (2 points)
-3. __Clarity and Presentation__: (2 points)
+1. __Description of Participant__: (1 point)
+2. __Specific Findings__: (6 x .5 points)
+3. __Plan for Remaining Participants__: (2 points)
+4. __Clarity and Presentation__: (2 points)
 
 #### Samples of Prior Submissions
 
@@ -312,11 +313,12 @@ so that you can easily present them to peers for critique.
 
 #### Grading
 
-This milestone will be graded on a scale of __12 points__:
+This milestone will be graded on a scale of __13 points__:
 
-1. __Description of Participants__ : (3 points)
-2. __Quality of Themes Developed__: (3 points)
-3. __Answers to Task Analysis Questions__: (4 points)
+1. __Description of Participants__ : (2 points)
+2. __Specific Findings__ : (8 x .5 points)
+2. __Quality of Themes Developed__: (2 points)
+3. __Answers to Task Analysis Questions__: (3 points)
 4. __Clarity and Presentation__: (2 points)
 
 #### Samples of Prior Submissions
