--- a/src/pages/Home.mdx
+++ b/src/pages/Home.mdx
@@ -6,7 +6,7 @@ import pathPhotoJames from '../assets/images/james_photo.jpg';
 import pathPhotoEthan from '../assets/images/ethan_photo.png';
 import pathPhotoJason from '../assets/images/jason_photo.png';
 import pathPhotoLisa from '../assets/images/lisa_photo.jpg';
-import pathPhotoSimona from '../assets/images/simona_photo.jpg';
+import pathPhotoSimona from '../assets/images/simona_photo.png';
 
 import {
     Alert
