--- a/src/content/assignments/assignment4/Assignment4.mdx
+++ b/src/content/assignments/assignment4/Assignment4.mdx
@@ -201,6 +201,8 @@ This is a new assignment, in which we have:
 Examples of reports from Assignment 2 and Assignment 3 are linked from projects in prior offerings,
 but be sure your submissions is designed for the new format and emphasis of this assignment:
 
+Spring 2022 Projects: [https://courses.cs.washington.edu/courses/cse440/22sp/projects](https://courses.cs.washington.edu/courses/cse440/22sp/projects)
+
 Winter 2020 Projects: [https://courses.cs.washington.edu/courses/cse440/20wi/projects](https://courses.cs.washington.edu/courses/cse440/20wi/projects)
 
 Winter 2019 Projects: [https://courses.cs.washington.edu/courses/cse440/19wi/projects](https://courses.cs.washington.edu/courses/cse440/19wi/projects)
