Add AssignmentItem type, Update Assignment 0 and 1

--- a/src/content/assignments/assignment0/Assignment0.mdx
+++ b/src/content/assignments/assignment0/Assignment0.mdx
@@ -1,6 +1,6 @@
 import {
-    CourseInformationDueDate,
-    CourseInformationLink,
+    CourseInformationDueDateNew,
+    CourseInformationLinkNew,
 } from 'src/components/CourseInformation';
 
 # Assignment 0: Introduction Slide
@@ -22,11 +22,11 @@ For example, your slide might be similar to our introduction slides in the first
 
 ### Submission
 
-<p><CourseInformationDueDate dueDateName='dueDateAssignment0' /></p>
+<p><CourseInformationDueDateNew assignmentTitle='0 - Introduction Slide' /></p>
 
 One page in PDF format. Submit via Canvas here:
 
-<p><CourseInformationLink linkName='linkCanvasAssignment0' /></p>
+<p><CourseInformationLinkNew assignmentTitle='0 - Introduction Slide' /></p>
 
 ### Grading
 
