--- a/src/content/assignments/assignment1/Assignment1.mdx
+++ b/src/content/assignments/assignment1/Assignment1.mdx
@@ -287,7 +287,7 @@ but may also apply a penalty if the original submission was severely underdevelo
 
 #### Samples of Prior Submissions
 
-<AssignmentSamples milestone='1b' />
+<AssignmentSamples milestone='assignment1b' />
 
 </CollapseProjectMilestoneNew>
 
@@ -338,6 +338,6 @@ This milestone will be graded on a scale of __10 points__:
 
 #### Samples of Prior Submissions
 
-<AssignmentSamples milestone='1c' />
+<AssignmentSamples milestone='assignment1c' />
 
 </CollapseProjectMilestoneNew>
