--- a/src/content/assignments/assignment2/Assignment2.mdx
+++ b/src/content/assignments/assignment2/Assignment2.mdx
@@ -153,7 +153,7 @@ This milestone will be graded on a scale of __10 points__:
 
 #### Samples of Prior Submissions
 
-<AssignmentSamples milestone='2b' />
+<AssignmentSamples milestone='assignment2b' />
 
 </CollapseProjectMilestone>
 
@@ -224,7 +224,7 @@ This milestone will be graded on a scale of __8 points__:
 
 #### Samples of Prior Submissions
 
-<AssignmentSamples milestone='2c' />
+<AssignmentSamples milestone='assignment2c' />
 
 </CollapseProjectMilestone>
 
@@ -323,7 +323,7 @@ This milestone will be graded on a scale of __13 points__:
 
 #### Samples of Prior Submissions
 
-<AssignmentSamples milestone='2d' />
+<AssignmentSamples milestone='assignment2d' />
 
 </CollapseProjectMilestone>
 
@@ -387,7 +387,7 @@ This milestone will be graded on a scale of __8 points__:
 
 #### Samples of Prior Submissions
 
-<AssignmentSamples milestone='2e' />
+<AssignmentSamples milestone='assignment2e' />
 
 </CollapseProjectMilestone>
 
@@ -459,7 +459,7 @@ This milestone will be graded on a scale of __10 points__:
 
 #### Samples of Prior Submissions
 
-<AssignmentSamples milestone='2f' />
+<AssignmentSamples milestone='assignment2f' />
 
 </CollapseProjectMilestone>
 
@@ -530,7 +530,7 @@ This milestone will be graded on a scale of __8 points__:
 
 #### Samples of Prior Submissions
 
-<AssignmentSamples milestone='2g' />
+<AssignmentSamples milestone='assignment2g' />
 </CollapseProjectMilestone>
 
 {/*
@@ -645,5 +645,5 @@ The delivery of this presentation will be graded on a scale of __4 points__:
 
 #### Samples of Prior Submissions
 
-<AssignmentSamples milestone='2p' />
+<AssignmentSamples milestone='assignment2p' />
 </CollapseProjectMilestone>
