--- a/src/content/assignments/assignment2/Assignment2.mdx
+++ b/src/content/assignments/assignment2/Assignment2.mdx
@@ -338,17 +338,22 @@ The goal of this milestone is to develop a set of tasks that you will explore in
 
 Building on what you learned in your design research, design __six tasks__ that you believe are important to your design goal:
 
- - Remember that tasks say what is accomplished, while leaving open how to accomplish it.
- - Select tasks to capture the important aspects of the problem you are solving and to provide coverage of designs you will explore.
- - Create tasks based on your observations and analyses of existing tasks (i.e., tasks people already do)
-   as well as your vision for new tasks (i.e., tasks that will be enabled by your design).
- - These should be real world tasks that include details
-   (e.g., instead of "programming a DVR", details like "programming a DVR to record Spongebob on Sundays").
- - These tasks should not have any specific relation to the potential designs you will brainstorm in later milestones.
- - Your six tasks should span a wide range of functionality and difficulty, from easy tasks to hard tasks.
+- Remember that tasks say what is accomplished, while leaving open how to accomplish it.
+- Select tasks to capture the important aspects of the problem you are solving and to provide coverage of designs you will explore.
+- Create tasks based on your observations and analyses of existing tasks (i.e., tasks people already do)
+  as well as your vision for new tasks (i.e., tasks that will be enabled by your potential designs).
+- These should be real world tasks that include details
+  (e.g., instead of "programming a DVR", details like "programming a DVR to record Spongebob on Sundays").
+  Such details can then be explored in scenarios with the potential designs you will develop in later milestones.
+- Tasks should not have any specific relation to the potential designs you will develop in later milestones.
+  Although it can be helpful to describe a task in the context of a specific scenario,
+  the task itself should be more general and potentially achieved using multiple potential designs.
+- Your six tasks should span a wide range of functionality and difficulty.
 
-Each task should be described in text.
-Be sure that your task conveys a problem and what is accomplished, rather than a step-by-step walkthrough of scenario with a specific design.
+Each task should concisely convey a problem and what is accomplished,
+then might provide further detail in a step-by-step walkthrough of one or more scenarios with specific designs.
+For example, tasks might be presented as a bolded sentence at the beginning of a paragraph,
+with additional details and potential scenarios presented in the remainder of the paragraph.
 
 As you progress in your project, you can and should consider revising your tasks.
 Expect to refine or change your tasks as your understanding of the problem matures or according to feedback you receive.
