Make AssignmentStore and corresponding updates

--- a/src/content/assignments/assignment1/Assignment1.mdx
+++ b/src/content/assignments/assignment1/Assignment1.mdx
@@ -13,7 +13,7 @@ import {
 } from 'src/components/AssignmentSamples';
 import {
     CourseInformationLink,
-    CourseInformationLinkNew
+    AssignmentLinkNew
 } from 'src/components/CourseInformation';
 
 import CanvasGroupsNotCreated from 'src/content/assignments/CanvasGroupsNotCreated.mdx'
@@ -199,7 +199,7 @@ No more than one page of text in PDF format.
 
 Submit via Canvas here:
 
-<p><CourseInformationLinkNew assignmentTitle='1a - Individual Brainstorm' /></p>
+<p><AssignmentLinkNew assignmentTitle='1a - Individual Brainstorm' /></p>
 
 If you are still attempting to add, or otherwise unable to access the submission system, submit via the staff email address.
 
@@ -258,11 +258,11 @@ No more than one page of text in PDF format.
 
 Submit via Canvas here:
 
-<p><CourseInformationLinkNew assignmentTitle='1b - Group Proposals' /></p>
+<p><AssignmentLinkNew assignmentTitle='1b - Group Proposals' /></p>
 
 After receiving critique on Thursday, submit an updated version via Canvas here:
 
-<p><CourseInformationLinkNew assignmentTitle='1b_rev - Group Proposals' /></p>
+<p><AssignmentLinkNew assignmentTitle='1b_rev - Group Proposals' /></p>
 
 #### In Class
 
@@ -323,7 +323,7 @@ No more than one page of text in PDF format.
 
 Submit via Canvas here:
 
-<p><CourseInformationLinkNew assignmentTitle='1c - Finalized Proposal' /></p>
+<p><AssignmentLinkNew assignmentTitle='1c - Finalized Proposal' /></p>
 
 #### Grading
 
