--- a/src/content/assignments/assignment2/Assignment2.mdx
+++ b/src/content/assignments/assignment2/Assignment2.mdx
@@ -13,8 +13,8 @@ import {
 } from 'src/components/AssignmentSamples';
 
 import {
-    CourseInformationDueDate,
-    CourseInformationLink,
+    AssignmentDueDate,
+    AssignmentLink,
 } from 'src/components/CourseInformation';
 
 import ClarityAndPresentationReference from 'src/content/assignments/ClarityAndPresentationReference.mdx'
@@ -133,7 +133,7 @@ No more than two pages of text in PDF format.
 
 Submit via Canvas here:
 
-<p><CourseInformationLink linkName='linkCanvasAssignment2b' /></p>
+<p><AssignmentLink linkName='linkCanvasAssignment2b' /></p>
 
 #### In Class
 
@@ -204,7 +204,7 @@ No more than one page of text in PDF format.
 
 Submit via Canvas here:
 
-<p><CourseInformationLink linkName='linkCanvasAssignment2c' /></p>
+<p><AssignmentLink linkName='linkCanvasAssignment2c' /></p>
 
 #### In Class
 
@@ -302,7 +302,7 @@ Be sure:
 
 Submit via Canvas here:
 
-<p><CourseInformationLink linkName='linkCanvasAssignment2d' /></p>
+<p><AssignmentLink linkName='linkCanvasAssignment2d' /></p>
 
 #### In Class
 
@@ -369,7 +369,7 @@ Be sure:
 
 Submit via Canvas here:
 
-<p><CourseInformationLink linkName='linkCanvasAssignment2e' /></p>
+<p><AssignmentLink linkName='linkCanvasAssignment2e' /></p>
 
 #### In Class
 
@@ -436,11 +436,11 @@ Be sure:
 
 Submit via Canvas here:
 
-<p><CourseInformationLink linkName='linkCanvasAssignment2f' /></p>
+<p><AssignmentLink linkName='linkCanvasAssignment2f' /></p>
 
 After receiving critique on Thursday, submit an updated version via Canvas here:
 
-<p><CourseInformationLink linkName='linkCanvasAssignment2f_revised' /></p>
+<p><AssignmentLink linkName='linkCanvasAssignment2f_revised' /></p>
 
 #### In Class
 
@@ -511,7 +511,7 @@ Be sure:
 
 Submit via Canvas here:
 
-<p><CourseInformationLink linkName='linkCanvasAssignment2g' /></p>
+<p><AssignmentLink linkName='linkCanvasAssignment2g' /></p>
 
 #### In Class
 
@@ -613,7 +613,7 @@ But you are ultimately responsible for your presentation.
 
 Submit via Canvas here:
 
-<p><CourseInformationLink linkName='linkCanvasAssignment2p' /></p>
+<p><AssignmentLink linkName='linkCanvasAssignment2p' /></p>
 
 ### Grading
 
