--- a/src/content/assignments/assignment3/Assignment3.mdx
+++ b/src/content/assignments/assignment3/Assignment3.mdx
@@ -13,8 +13,8 @@ import {
 } from 'src/components/AssignmentSamples';
 
 import {
-    CourseInformationDueDate,
-    CourseInformationLink,
+    AssignmentDueDate,
+    AssignmentLink,
 } from 'src/components/CourseInformation';
 
 import ClarityAndPresentationReference from 'src/content/assignments/ClarityAndPresentationReference.mdx'
@@ -72,7 +72,7 @@ Be sure:
 
 Submit via Canvas here:
 
-<p><CourseInformationLink linkName='linkCanvasAssignment3a' /></p>
+<p><AssignmentLink linkName='linkCanvasAssignment3a' /></p>
 
 #### In Class
 
@@ -223,7 +223,7 @@ Be sure:
 
 Submit via Canvas here:
 
-<p><CourseInformationLink linkName='linkCanvasAssignment3c' /></p>
+<p><AssignmentLink linkName='linkCanvasAssignment3c' /></p>
 
 Be prepared to discuss your iterative revision of your paper prototype.
 
@@ -304,7 +304,7 @@ Be sure:
 
 Submit via Canvas here:
 
-<p><CourseInformationLink linkName='linkCanvasAssignment3d' /></p>
+<p><AssignmentLink linkName='linkCanvasAssignment3d' /></p>
 
 #### In Class
 
@@ -401,7 +401,7 @@ Be sure:
 
 Submit via Canvas here:
 
-<p><CourseInformationLink linkName='linkCanvasAssignment3e' /></p>
+<p><AssignmentLink linkName='linkCanvasAssignment3e' /></p>
 
 Be prepared to discuss your digital mockup and revisions that occurred in its creation.
 
@@ -507,7 +507,7 @@ But you are ultimately responsible for your presentation.
 
 Submit via Canvas here:
 
-<p><CourseInformationLink linkName='linkCanvasAssignment3p' /></p>
+<p><AssignmentLink linkName='linkCanvasAssignment3p' /></p>
 
 ### Grading
 
