--- a/src/content/assignments/assignment4/Assignment4.mdx
+++ b/src/content/assignments/assignment4/Assignment4.mdx
@@ -13,7 +13,7 @@ import {
 } from 'src/components/AssignmentSamples';
 
 import {
-    CourseInformationLink,
+    AssignmentLink,
 } from 'src/components/CourseInformation';
 
 import ClarityAndPresentationReference from 'src/content/assignments/ClarityAndPresentationReference.mdx'
@@ -174,7 +174,7 @@ Be sure:
 
 Prepare this initial version of your web post in a Google Doc, submit a link to that document via Canvas here:
 
-<p><CourseInformationLink linkName='linkCanvasAssignment4web' /></p>
+<p><AssignmentLink linkName='linkCanvasAssignment4web' /></p>
 
 Be sure:
 
@@ -262,7 +262,7 @@ We will then coordinate with you around any modifications as we integrate your p
 
 Submit via Canvas here:
 
-<p><CourseInformationLink linkName='linkCanvasAssignment4web_final' /></p>
+<p><AssignmentLink linkName='linkCanvasAssignment4web_final' /></p>
 
 #### Grading
 
@@ -330,7 +330,7 @@ Be sure:
 
 Submit via Canvas here:
 
-<p><CourseInformationLink linkName='linkCanvasAssignment4poster' /></p>
+<p><AssignmentLink linkName='linkCanvasAssignment4poster' /></p>
 
 #### In Class
 
@@ -389,7 +389,7 @@ Be sure:
 
 Submit via Canvas here:
 
-<p><CourseInformationLink linkName='linkCanvasAssignment4poster_final' /></p>
+<p><AssignmentLink linkName='linkCanvasAssignment4poster_final' /></p>
 
 We will then coordinate with you for proofreading and printing.
 
