--- a/src/content/assignments/assignment0/Assignment0.mdx
+++ b/src/content/assignments/assignment0/Assignment0.mdx
@@ -1,6 +1,6 @@
 import {
-    CourseInformationDueDateNew,
-    CourseInformationLinkNew,
+    AssignmentDueDateNew,
+    AssignmentLinkNew,
 } from 'src/components/CourseInformation';
 
 # Assignment 0: Introduction Slide
@@ -22,11 +22,11 @@ For example, your slide might be similar to our introduction slides in the first
 
 ### Submission
 
-<p><CourseInformationDueDateNew assignmentTitle='0 - Introduction Slide' /></p>
+<p><AssignmentDueDateNew assignmentTitle='0 - Introduction Slide' /></p>
 
 One page in PDF format. Submit via Canvas here:
 
-<p><CourseInformationLinkNew assignmentTitle='0 - Introduction Slide' /></p>
+<p><AssignmentLinkNew assignmentTitle='0 - Introduction Slide' /></p>
 
 ### Grading
 
