Consistent Naming for Project Samples

--- a/src/content/assignments/assignment1/Assignment1.mdx
+++ b/src/content/assignments/assignment1/Assignment1.mdx
@@ -9,8 +9,8 @@ import {
 } from 'src/components/CollapseProjectMilestone';
 
 import {
-    AssignmentSamples
-} from 'src/components/AssignmentSamples';
+    ProjectMilestoneSamples
+} from 'src/components/ProjectMilestoneSamples';
 import {
     CourseInformationLink,
     AssignmentLinkNew
@@ -287,7 +287,7 @@ but may also apply a penalty if the original submission was severely underdevelo
 
 #### Samples of Prior Submissions
 
-<AssignmentSamples milestone='assignment1b' />
+<ProjectMilestoneSamples milestone='assignment1b' />
 
 </CollapseProjectMilestoneNew>
 
@@ -338,6 +338,6 @@ This milestone will be graded on a scale of __10 points__:
 
 #### Samples of Prior Submissions
 
-<AssignmentSamples milestone='assignment1c' />
+<ProjectMilestoneSamples milestone='assignment1c' />
 
 </CollapseProjectMilestoneNew>
