--- a/src/content/assignments/assignment2/Assignment2.mdx
+++ b/src/content/assignments/assignment2/Assignment2.mdx
@@ -9,8 +9,8 @@ import {
 } from 'src/components/CollapseProjectMilestone';
 
 import {
-    AssignmentSamples
-} from 'src/components/AssignmentSamples';
+    ProjectMilestoneSamples
+} from 'src/components/ProjectMilestoneSamples';
 
 import {
     AssignmentDueDate,
@@ -153,7 +153,7 @@ This milestone will be graded on a scale of __10 points__:
 
 #### Samples of Prior Submissions
 
-<AssignmentSamples milestone='assignment2b' />
+<ProjectMilestoneSamples milestone='assignment2b' />
 
 </CollapseProjectMilestone>
 
@@ -224,7 +224,7 @@ This milestone will be graded on a scale of __8 points__:
 
 #### Samples of Prior Submissions
 
-<AssignmentSamples milestone='assignment2c' />
+<ProjectMilestoneSamples milestone='assignment2c' />
 
 </CollapseProjectMilestone>
 
@@ -323,7 +323,7 @@ This milestone will be graded on a scale of __13 points__:
 
 #### Samples of Prior Submissions
 
-<AssignmentSamples milestone='assignment2d' />
+<ProjectMilestoneSamples milestone='assignment2d' />
 
 </CollapseProjectMilestone>
 
@@ -392,7 +392,7 @@ This milestone will be graded on a scale of __8 points__:
 
 #### Samples of Prior Submissions
 
-<AssignmentSamples milestone='assignment2e' />
+<ProjectMilestoneSamples milestone='assignment2e' />
 
 </CollapseProjectMilestone>
 
@@ -464,7 +464,7 @@ This milestone will be graded on a scale of __10 points__:
 
 #### Samples of Prior Submissions
 
-<AssignmentSamples milestone='assignment2f' />
+<ProjectMilestoneSamples milestone='assignment2f' />
 
 </CollapseProjectMilestone>
 
@@ -535,7 +535,7 @@ This milestone will be graded on a scale of __8 points__:
 
 #### Samples of Prior Submissions
 
-<AssignmentSamples milestone='assignment2g' />
+<ProjectMilestoneSamples milestone='assignment2g' />
 </CollapseProjectMilestone>
 
 {/*
@@ -650,5 +650,5 @@ The delivery of this presentation will be graded on a scale of __4 points__:
 
 #### Samples of Prior Submissions
 
-<AssignmentSamples milestone='assignment2p' />
+<ProjectMilestoneSamples milestone='assignment2p' />
 </CollapseProjectMilestone>
