--- a/src/content/assignments/assignment4/Assignment4.mdx
+++ b/src/content/assignments/assignment4/Assignment4.mdx
@@ -9,8 +9,8 @@ import {
 } from 'src/components/CollapseProjectMilestone';
 
 import {
-    AssignmentSamples
-} from 'src/components/AssignmentSamples';
+    ProjectMilestoneSamples
+} from 'src/components/ProjectMilestoneSamples';
 
 import {
     AssignmentLink,
@@ -355,7 +355,7 @@ Critique and refinement will help further improve it before a final version.
 
 #### Samples of Prior Submissions
 
-<AssignmentSamples milestone='4poster' />
+<ProjectMilestoneSamples milestone='4poster' />
 </CollapseProjectMilestone>
 
 {/*
