--- a/src/content/assignments/assignment3/Assignment3.mdx
+++ b/src/content/assignments/assignment3/Assignment3.mdx
@@ -9,8 +9,8 @@ import {
 } from 'src/components/CollapseProjectMilestone';
 
 import {
-    AssignmentSamples
-} from 'src/components/AssignmentSamples';
+    ProjectMilestoneSamples
+} from 'src/components/ProjectMilestoneSamples';
 
 import {
     AssignmentDueDate,
@@ -89,7 +89,7 @@ This milestone will be graded on a scale of __12 points__:
 
 #### Samples of Prior Submissions
 
-<AssignmentSamples milestone='assignment3a' />
+<ProjectMilestoneSamples milestone='assignment3a' />
 </CollapseProjectMilestone>
 
 {/*
@@ -244,7 +244,7 @@ This milestone will be graded on a scale of __14 points__:
 
 #### Samples of Prior Submissions
 
-<AssignmentSamples milestone='assignment3c' />
+<ProjectMilestoneSamples milestone='assignment3c' />
 </CollapseProjectMilestone>
 
 {/*
@@ -324,7 +324,7 @@ This milestone will be graded on a scale of __16 points__:
 
 #### Samples of Prior Submissions
 
-<AssignmentSamples milestone='assignment3d' />
+<ProjectMilestoneSamples milestone='assignment3d' />
 </CollapseProjectMilestone>
 
 {/*
@@ -416,7 +416,7 @@ This milestone will be graded on a scale of __14 points__:
 
 #### Samples of Prior Submissions
 
-<AssignmentSamples milestone='assignment3e' />
+<ProjectMilestoneSamples milestone='assignment3e' />
 </CollapseProjectMilestone>
 
 {/*
@@ -539,5 +539,5 @@ The delivery of this presentation will be graded on a scale of __4 points__:
 
 #### Samples of Prior Submissions
 
-<AssignmentSamples milestone='assignment3p' />
+<ProjectMilestoneSamples milestone='assignment3p' />
 </CollapseProjectMilestone>
